--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/hooks": "^2.6.0",
     "react": "17.0.1",
-    "react-native": "0.64.0"
+    "react-native": "^0.64.0",
+    "react-native-cli": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
